--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     background: url('./img/hoa-dao.png') no-repeat;
     background-size: contain;
     opacity: 0.8;
@@ -47,6 +47,8 @@ body {
     content: '';
     position: absolute;
     bottom: 0;
+    top: 0;
+
     right: 0;
     width: 150px;
     height: 150px;
@@ -155,7 +157,8 @@ h1 {
     margin: 8px 0;
     color: #ffffff;
     position: relative;
-    font-size: 0.9em;
+    font-size: 16px;
+    line-height: 1.4;
 }
 
 .info-item ul li:before {
@@ -245,7 +248,7 @@ h1 {
 
     .info-item {
         min-width: 45%;
-        padding: 12px;
+        padding: 10px;
     }
 
     .info-item h3 {
@@ -253,7 +256,10 @@ h1 {
     }
 
     .info-item ul li {
-        font-size: 0.85em;
+        font-size: 11px;
+        line-height: 1.3;
+        margin: 5px 0;
+        padding-right: 5px;
     }
 
     .tagline {
